--- a/estilo/style.css
+++ b/estilo/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: rgb(65, 225, 73);
+    background-color: rgb(42, 8, 213);
 }
 
 main {
@@ -12,5 +12,5 @@ main {
     width: 500px;
     margin: auto;
     padding: 10px;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.473);
+    box-shadow: 3px 3px 5px rgb(26, 182, 49);
 }
